--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -18,3 +18,106 @@
 *::after {
   box-sizing: inherit;
 }
+header {
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+  padding: 5px;
+}
+
+li a {
+  text-decoration: none;
+}
+
+.first-nav {
+  display: flex;
+  flex-wrap: wrap;
+  background: #131313;
+  height: 40px;
+  align-content: center;
+}
+
+.first-ul{
+  flex:1;
+  display: flex;
+  justify-content: flex-start;
+
+}
+
+.last-ul{
+  flex:1;
+  display: flex;
+  justify-content: flex-end;
+}
+.first-nav li {
+    background: #131313;
+    margin:0 5px;
+}
+
+.first-ul li:first-of-type{
+  margin-left: 15px;
+}
+
+.last-ul li:last-of-type{
+  margin-right: 15px;
+}
+
+.first-nav li a {
+  color: #7d7c7c;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.first-nav li a:hover,
+.first-nav li a:active {
+  color: white;
+}
+
+.last-nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.last-nav ul{
+  flex-basis: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  height: 40px;
+  align-content: center;
+}
+
+.last-nav ul li{
+  margin-right:20px; 
+}
+
+.last-nav ul li:first-child{
+  margin-left: 20px;
+}
+
+input{
+  width: 50px;
+  height: 40px;
+  padding: 5px;
+}
+
+.last-nav a{
+  color: #aaa;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight:bold;
+}
+
+header a p {
+  background: #fd3;
+  height: 30px;
+  padding-top: 10px;
+  padding-left: 20px;
+}
+
+header a{
+  font-size: 14px;
+  text-decoration: none;
+  color: black; 
+}
